# gemini-paddle-api

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
routers/: gemini_router.py  ocr_router.py
src/: auth.py  main.py
src/functions/gemini_func/: gem_func.py
src/functions/ocr_func/: paddle_func.py
src/gemini_func/: gem_func.py
src/pddocr_func/: paddle_func.py
src/routers/: gemini_router.py  ocr_router.py
